--- a/lesson13/contact.html
+++ b/lesson13/contact.html
@@ -12,108 +12,108 @@
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
 </head>
-<body>
-    <header>
-        <div class="header-layout">
-            <H1>CONTACT THE</H1>
-            <img src="images/logo-200.jpg" alt="Draper City Logo" class="logo-image">
-            <H2 class="down-you-go">CHAMBER OF COMMERCE</H2>
-        </div>
+    <body>
+        <header>
+            <div class="header-layout">
+                <H1>CONTACT THE</H1>
+                <img src="images/logo-200.jpg" alt="Draper City Logo" class="logo-image">
+                <H2 class="down-you-go">CHAMBER OF COMMERCE</H2>
+            </div>
 
-        <nav role="navigation">
-            <div id="menuToggle">
-              <input type="checkbox">
-                <span></span>
-                <span></span>
-                <span></span>
-            <ul class="head-nav-list" id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="city.html">City</a></li>
-                <li><a href="join.html">Join</a></li>
-                <li><a href="directory.html">Directory</a></li>
-                <li><a href="contact.html" class="nav-active">Contact</a></li>
-            </ul>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <div class="contact-box">
-            <div class="contact-center">
-                <h2>Contact Us</h2>
-                <p>We would love to hear from you!</p>
-            </div>
-            <div class="contact-left">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48546.78732024136!2d-111.88748536479312!3d40.493530638372654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752805153135f0f%3A0xea3aa3af26cf70b2!2sDraper%2C%20UT!5e0!3m2!1sen!2sus!4v1626271065119!5m2!1sen!2sus" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <div class="contact_us_info">
-                    <br>
-                    Draper City Chamber of Commerce<br>
-                    1160 Pioneer Road<br>
-                    Draper, UT 84020<br>
-                    <br>
-                    (801) 553-0928
+            <nav role="navigation">
+                <div id="menuToggle">
+                <input type="checkbox">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                <ul class="head-nav-list" id="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="city.html">City</a></li>
+                    <li><a href="join.html">Join</a></li>
+                    <li><a href="directory.html">Directory</a></li>
+                    <li><a href="contact.html" class="nav-active">Contact</a></li>
+                </ul>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <div class="contact-box">
+                <div class="contact-center">
+                    <h2>Contact Us</h2>
+                    <p>We would love to hear from you!</p>
+                </div>
+                <div class="contact-left">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48546.78732024136!2d-111.88748536479312!3d40.493530638372654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752805153135f0f%3A0xea3aa3af26cf70b2!2sDraper%2C%20UT!5e0!3m2!1sen!2sus!4v1626271065119!5m2!1sen!2sus" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <div class="contact_us_info">
+                        <br>
+                        Draper City Chamber of Commerce<br>
+                        1160 Pioneer Road<br>
+                        Draper, UT 84020<br>
+                        <br>
+                        (801) 553-0928
+                    </div>
+                </div>
+                <div class="contact-right">
+                    <form action="actionpage.html">
+                        <label for="firstname">First Name<br>
+                            <input id="firstname" type="text" name="first_name" placeholder="John" required></label><br>
+                        <label for="lastname">Last Name<br>
+                            <input id="lastname" type="text" name="last_name" placeholder="Doe" required></label><br>
+                        <label for="phone">Phone<br>
+                            <input id="phone" type="tel" name="phone_number" placeholder="555-555-5555"></label><br>
+                        <label for="email">E-mail<br>
+                            <input id="email" type="email" name="e_mail" placeholder="johndoe@drapercity.gov"></label><br>
+                        <label for="comments">Comments<br>
+                            <input id="comments" type="text" name="send_comment"></label><br>
+                            <br>
+                            <div class="comments-button">
+                                <a href="thanks.html"></a>
+                                <input type="submit" id="submit-comment" value="Submit">
+                            </div>
+                    </form>
                 </div>
             </div>
-            <div class="contact-right">
-                <form action="actionpage.html">
-                    <label for="firstname">First Name<br>
-                        <input id="firstname" type="text" name="first_name" placeholder="John" required></label><br>
-                    <label for="lastname">Last Name<br>
-                        <input id="lastname" type="text" name="last_name" placeholder="Doe" required></label><br>
-                    <label for="phone">Phone<br>
-                        <input id="phone" type="tel" name="phone_number" placeholder="555-555-5555"></label><br>
-                    <label for="email">E-mail<br>
-                        <input id="email" type="email" name="e_mail" placeholder="johndoe@drapercity.gov"></label><br>
-                    <label for="comments">Comments<br>
-                        <input id="comments" type="text" name="send_comment"></label><br>
-                        <br>
-                        <div class="comments-button">
-                            <a href="thanks.html">
-                            <input type="submit" id="submit-comment" value="Submit">
-                            </a>
-                        </div>
-                </form>
-            </div>
-        </div>
-    <br>
-    <br>
-        <div class="board-box">
-            <h3 class="board-big">Board of Directors</h3>
-            <div class="board">
-                <figure class="pic1 pics">
-                    <img src="images/placeholder.jpg" data-src="images/bill-rappleye.jpg" alt="Bill Rappleye" class="js-lazy-load">
-                    <figcaption>Bill Rappleye, President and CEO</figcaption>
+        <br>
+        <br>
+            <div class="board-box">
+                <h3 class="board-big">Board of Directors</h3>
+                <div class="board">
+                    <figure class="pic1 pics">
+                        <img src="images/placeholder.jpg" data-src="images/bill-rappleye.jpg" alt="Bill Rappleye" class="js-lazy-load">
+                        <figcaption>Bill Rappleye, President and CEO</figcaption>
+                        </figure>
+                    <figure class="pic2 pics">
+                        <img src="images/placeholder.jpg" data-src="images/lorainne-myers.jpg" alt="Lorainne Myers" class="js-lazy-load">
+                        <figcaption>Lorainne Myers, Chief Administrative Officer</figcaption>
                     </figure>
-                <figure class="pic2 pics">
-                    <img src="images/placeholder.jpg" data-src="images/lorainne-myers.jpg" alt="Lorainne Myers" class="js-lazy-load">
-                    <figcaption>Lorainne Myers, Chief Administrative Officer</figcaption>
-                </figure>
+                </div>
+            <script src="js/lewis.js" defer></script>
             </div>
-        <script src="js/lewis.js" defer></script>
-        </div>
-    <footer>
-        <div class="foot-flex">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97093.69203342513!2d-111.92250593211558!3d40.49344950960342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752805153135f0f%3A0xea3aa3af26cf70b2!2sDraper%2C%20UT!5e0!3m2!1sen!2sus!4v1626190363138!5m2!1sen!2sus" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                <ul>
-                    <li><strong>Contact Information</strong></li>
-                    <li>1160 So Pioneeer Road</li>
-                    <li>Draper, UT 84020</li>
-                    <li>(801) 553-0928</li>
-                </ul>
-            <div class="be-social">
-                 <a href="https://www.facebook.com/places/Things-to-do-in-Draper-Utah/105571529476024/"><img src="images/fb-logo.png" alt="facebook"></a>
-                 <a href="https://www.instagram.com/drapercity/"><img src="images/ig-logo.png" alt="instagram"></a>
+        </main>
+        <footer>
+            <div class="foot-flex">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97093.69203342513!2d-111.92250593211558!3d40.49344950960342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752805153135f0f%3A0xea3aa3af26cf70b2!2sDraper%2C%20UT!5e0!3m2!1sen!2sus!4v1626190363138!5m2!1sen!2sus" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <ul>
+                        <li><strong>Contact Information</strong></li>
+                        <li>1160 So Pioneeer Road</li>
+                        <li>Draper, UT 84020</li>
+                        <li>(801) 553-0928</li>
+                    </ul>
+                <div class="be-social">
+                    <a href="https://www.facebook.com/places/Things-to-do-in-Draper-Utah/105571529476024/"><img src="images/fb-logo.png" alt="facebook"></a>
+                    <a href="https://www.instagram.com/drapercity/"><img src="images/ig-logo.png" alt="instagram"></a>
+                </div>
             </div>
+        </footer>
+        <div class="sub-foot">
+            © <span id="NewYear"></span> Draper Chamber of Commerce | Wendy Strickland | WDD230<br>
+            Current Date: <span id="currentdate"></span> | <span class="terms"><a href="https://www.termsfeed.com/live/53a350ac-d1c9-471a-8ca2-25569d76a2ab" target="_blank" class="tc">Terms and Conditions</a></span><br>
+            <script src="js/year.js"></script>
         </div>
-    </footer>
-    <div class="sub-foot">
-        © <span id="NewYear"></span> Draper Chamber of Commerce | Wendy Strickland | WDD230<br>
-        Current Date: <span id="currentdate"></span> | <span class="terms"><a href="https://www.termsfeed.com/live/53a350ac-d1c9-471a-8ca2-25569d76a2ab" target="_blank" class="tc">Terms and Conditions</a></span><br>
-        <script src="js/year.js"></script>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="js/webfont.js"></script>    
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script src="js/webfont.js"></script>    
+            <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+            <script src="js/webfont.js"></script>    
     </body>
 </html>
      
