--- a/lesson13/directory.html
+++ b/lesson13/directory.html
@@ -27,10 +27,10 @@
                     <span></span>
                     <span></span>
                 <ul class="head-nav-list" id="menu">
-                    <li><a href="index.html" class="nav-active">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="city.html">City</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="directory.html">Directory</a></li>
+                    <li><a href="directory.html" class="nav-active">Directory</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
