--- a/lesson13/directory.html
+++ b/lesson13/directory.html
@@ -44,8 +44,15 @@
         </div>
         <br>
         <div class="rolodex">
-               <div class="business-card">
-        </div>
+            <div class="restaurants-together">
+                <h2 class="restaurants">Local Restaurants</h2>
+                    <div class="business-card-restaurant"></div>
+            </div>
+               <br>
+            <div class="boutiques-together">
+                <h2 class="boutiques">Local Boutiques</h2>
+                    <div class="business-card-boutique"></div>
+            </div>
         <script src="js/grid-list.js"></script>
         <script src="js/jsoninfo.js"></script>
     </main>
