--- a/lesson13/directory.html
+++ b/lesson13/directory.html
@@ -42,19 +42,28 @@
             <button class="list-view btn" onclick="listView()"><i class="fa fa-bars"></i>List</button>
             <button class="grid-view btn active" onclick="gridView()"><i class="fa fa-th-large"></i>Grid</button>
         </div>
+            <script src="js/grid-list.js"></script>
         <br>
         <div class="rolodex">
             <div class="restaurants-together">
                 <h2 class="restaurants">Local Restaurants</h2>
-                    <div class="business-card-restaurant"></div>
+                <div class="business-card">
+                    <div class="restaurant-name"></div>
+                    <img src="" class="restaurant-logo">
+                    <div class="restaurant-address"></div>
+                    <div class="restaurant-city"></div>
+                    <div class="restaurant-phone"></div>
+                    <a href="" class="restaurant-website"></a>
+                </div>
             </div>
                <br>
             <div class="boutiques-together">
                 <h2 class="boutiques">Local Boutiques</h2>
-                    <div class="business-card-boutique"></div>
+                <div class="business-card">
+                    <div class="business-card-boutique business-card"></div>
+                </div>
             </div>
-        <script src="js/grid-list.js"></script>
-        <script src="js/jsoninfo.js"></script>
+        <script src="js/jsonjs.js"></script>
     </main>
 
     <footer>
