--- a/lesson13/directory.html
+++ b/lesson13/directory.html
@@ -47,23 +47,16 @@
         <div class="rolodex">
             <div class="restaurants-together">
                 <h2 class="restaurants">Local Restaurants</h2>
-                <div class="business-card">
-                    <div class="restaurant-name"></div>
-                    <img src="" class="restaurant-logo">
-                    <div class="restaurant-address"></div>
-                    <div class="restaurant-city"></div>
-                    <div class="restaurant-phone"></div>
-                    <a href="" class="restaurant-website"></a>
+                <div class="restaurant-card business-card">
                 </div>
             </div>
                <br>
             <div class="boutiques-together">
                 <h2 class="boutiques">Local Boutiques</h2>
-                <div class="business-card">
-                    <div class="business-card-boutique business-card"></div>
+                <div class="boutique-card business-card">
                 </div>
             </div>
-        <script src="js/jsonjs.js"></script>
+        <script src="js/jsoninfo.js"></script>
     </main>
 
     <footer>
