--- a/lesson13/contact.html
+++ b/lesson13/contact.html
@@ -43,7 +43,11 @@
                     <p>We would love to hear from you!</p>
                 </div>
                 <div class="contact-left">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48546.78732024136!2d-111.88748536479312!3d40.493530638372654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752805153135f0f%3A0xea3aa3af26cf70b2!2sDraper%2C%20UT!5e0!3m2!1sen!2sus!4v1626271065119!5m2!1sen!2sus" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <div class="mapview">
+                           
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d97093.66093694267!2d-111.852466!3d40.493471!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752805153135f0f%3A0xea3aa3af26cf70b2!2sDraper%2C%20UT!5e0!3m2!1sen!2sus!4v1626745579955!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+                           </iframe>
+                    </div>
                     <div class="contact_us_info">
                         <br>
                         Draper City Chamber of Commerce<br>
