--- a/lesson13/directory.html
+++ b/lesson13/directory.html
@@ -39,8 +39,8 @@
 
     <main class="directory">
         <div id="view-buttons">
-            <button class="list-view btn" onclick="listView()"><img src="images/list-view-small.png" class="view-icon magic-icons">List</button>
-            <button class="grid-view btn active" onclick="gridView()"><img src="images/grid-view-small.png" class="grid-icon magic-icons">Grid</button>
+            <button class="list-view btn" onclick="listView()"><img src="images/list-view-small.png" alt="list view icon" class="view-icon magic-icons">List</button>
+            <button class="grid-view btn active" onclick="gridView()"><img src="images/grid-view-small.png" alt="grid view icon" class="grid-icon magic-icons">Grid</button>
         </div>
         <br>
 
