--- a/lesson13/directory.html
+++ b/lesson13/directory.html
@@ -75,7 +75,7 @@
     </footer>
     <div class="sub-foot">
         © <span id="NewYear"></span> Draper Chamber of Commerce | Wendy Strickland | WDD230<br>
-        Current Date: <span id="currentdate"></span> | <span class="terms"><a href="https://www.termsfeed.com/live/53a350ac-d1c9-471a-8ca2-25569d76a2ab" target="_blank" class="tc">Terms and Conditions</a></span><br>
+        Last Modified: <span id="currentdate"></span> | <span class="terms"><a href="https://www.termsfeed.com/live/53a350ac-d1c9-471a-8ca2-25569d76a2ab" target="_blank" class="tc">Terms and Conditions</a></span><br>
         <script src="js/year.js"></script>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
